--- a/src/Styles/Pedidos.module.css
+++ b/src/Styles/Pedidos.module.css
@@ -1,8 +1,7 @@
 /* Estilos da Tabela e Container */
 .table-container {
-     overflow-x: auto;
-     /* Permite rolar horizontalmente se a tabela for maior que o contêiner */
-     margin-bottom: 20px;
+     max-height: 50vh;
+     overflow-y: auto;
 }
 
 .table {
@@ -65,7 +64,7 @@
      background: #d32f2f;
 }
 
-/* Estilos do Container Principal */
+/* Estilos do Container */
 .container {
      padding: 20px;
      margin: 0;
@@ -78,31 +77,30 @@
      position: fixed;
      top: 0;
      left: 0;
-     right: 0;
-     bottom: 0;
-     background: rgba(0, 0, 0, 0.5);
+     width: 100%;
+     height: 100%;
+     background-color: rgba(0, 0, 0, 0.5);
      display: flex;
      justify-content: center;
-     align-items: flex-start;
-     padding-top: 20px;
+     align-items: center;
 }
 
-/* Estilos Gerais do Modal */
 .modal {
-     background: #fff;
-     padding: 40px;
-     border-radius: 8px;
-     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-     width: 80%;
+     background-color: white;
+     padding: 20px;
+     width: 90%;
      max-width: 600px;
-     margin: 0 auto;
+     max-height: 90%;
+     overflow-y: auto;
+     box-sizing: border-box;
+     border-radius: 10px;
+     position: relative;
 }
 
 .modalHeader {
      display: flex;
      justify-content: space-between;
      align-items: center;
-     margin-bottom: 15px;
 }
 
 .modalHeader h2 {
@@ -192,7 +190,6 @@
      margin-top: 20px;
 }
 
-/* Estilos da Mensagem de Sucesso e Erro */
 .successMessage,
 .error {
      color: red;
@@ -222,4 +219,93 @@
 
 .createButton:hover {
      background-color: #005bb5;
+}
+
+/* Pedidos.module.css */
+
+.overlay {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background-color: rgba(0, 0, 0, 0.5);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+}
+
+.modal {
+     background-color: white;
+     padding-left: 20px;
+     padding-right: 20px;
+     width: 90%;
+     max-width: 600px;
+     max-height: 90%;
+     overflow-y: auto;
+     box-sizing: border-box;
+     border-radius: 10px;
+     position: relative;
+}
+
+.modalHeader {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+}
+
+.form {
+  max-height: 70vh; 
+  overflow-y: auto;
+}
+
+.form label {
+     display: flex;
+     flex-direction: column;
+     font-weight: bold;
+}
+
+.form select,
+.form input {
+     padding: 2px;
+     border: 1px solid #ccc;
+     border-radius: 4px;
+}
+
+.closeButton {
+     background: none;
+     border: none;
+     font-size: 24px;
+     cursor: pointer;
+     position: absolute;
+     top: 10px;
+     right: 10px;
+}
+
+
+.itemsList {
+     max-height: 200px;
+     overflow-y: auto;
+     border: 1px solid #ccc;
+     padding: 10px;
+     border-radius: 5px;
+     box-sizing: border-box;
+}
+
+
+.tableContainer {
+     max-height: 800px;
+     overflow-y: auto;
+}
+
+.table {
+     width: 100%;
+     border-collapse: collapse;
+}
+
+.table th,
+.table td {
+     padding: 8px;
+     border: 1px solid #ddd;
+     text-align: left;
 }
